--- a/sflphone-common/configure.ac
+++ b/sflphone-common/configure.ac
@@ -420,36 +420,14 @@ AC_DEFUN([BB_ENABLE_DOXYGEN],
 		[
 		AC_ARG_ENABLE(doxygen, [  --enable-doxygen        enable documentation generation with doxygen (auto)])
 		AC_ARG_ENABLE(dot, [  --enable-dot            use 'dot' to generate graphs in doxygen (auto)])              
-		AC_ARG_ENABLE(html-docs, [  --enable-html-docs      enable HTML generation with doxygen (yes)], [], [ enable_html_docs=yes])              
-		AC_ARG_ENABLE(latex-docs, [  --enable-latex-docs     enable LaTeX documentation generation with doxygen (no)], [], [ enable_latex_docs=no])              
-		if test "x$enable_doxygen" = xno; then
-		enable_doc=no
-		else 
+		if test "x$enable_doxygen" != xno; then
 		AC_PATH_PROG(DOXYGEN, doxygen, , $PATH)
-		if test x$DOXYGEN = x; then
-		if test "x$enable_doxygen" = xyes; then
-		AC_MSG_ERROR([could not find doxygen])
-		fi
-		enable_doc=no
-		else
-		enable_doc=yes
+		test x$DOXYGEN = x -a "x$enable_doxygen" = xyes && AC_MSG_ERROR([could not find doxygen])
 		AC_PATH_PROG(DOT, dot, , $PATH)
 		fi
-		fi
-		AM_CONDITIONAL(DOC, test x$enable_doc = xyes)
+        AM_CONDITIONAL(ENABLE_DOXYGEN, test x$DOXYGEN != x)
 
-	if test x$DOT = x; then
-	if test "x$enable_dot" = xyes; then
-	AC_MSG_ERROR([could not find dot])
-	fi
-	enable_dot=no
-	else
-	enable_dot=yes
-	fi
-	AM_CONDITIONAL(ENABLE_DOXYGEN, test x$enable_doc = xtrue)
-	AC_SUBST(enable_dot)
-	AC_SUBST(enable_html_docs)
-	AC_SUBST(enable_latex_docs)
+	test x$DOT = x -a "x$enable_dot" = xyes && AC_MSG_ERROR([could not find dot])
 	])
 	# Acutally perform the doxygen check
 	BB_ENABLE_DOXYGEN
