* #6249 : upgrade requirements to libav 0.7
Keep libswscale requirement low because the API did not change

--- a/sflphone-common/configure.ac
+++ b/sflphone-common/configure.ac
@@ -193,12 +193,12 @@ dnl Check for the samplerate development package - name: libsamplerate0-dev
 LIBSAMPLERATE_MIN_VERSION=0.1.2
 PKG_CHECK_MODULES(SAMPLERATE, samplerate >= ${LIBSAMPLERATE_MIN_VERSION},, AC_MSG_ERROR([Missing libsamplerate development package: libsamplerate0-dev]))
 
-dnl The libav versions correspond to the last beta release of libav, 0.7-beta2
+dnl The libav versions correspond to the last libav release: 0.7
 dnl Check for libavcodec development package - name: libavcodec-dev
-PKG_CHECK_MODULES(LIBAVCODEC, libavcodec >= 53.3.0,, AC_MSG_ERROR([Missing libavcodec package: libavcodec-dev]))
+PKG_CHECK_MODULES(LIBAVCODEC, libavcodec >= 53.5.0,, AC_MSG_ERROR([Missing libavcodec package: libavcodec-dev]))
 
 dnl Check for libavformat development package - name: libavformat-dev
-PKG_CHECK_MODULES(LIBAVFORMAT, libavformat >= 53.0.3,, AC_MSG_ERROR([Missing libavformat package: libavformat-dev]))
+PKG_CHECK_MODULES(LIBAVFORMAT, libavformat >= 53.2.0,, AC_MSG_ERROR([Missing libavformat package: libavformat-dev]))
 
 dnl Check for libswscale development package - name: libswcale-dev
 PKG_CHECK_MODULES(LIBSWSCALE, libswscale >= 1.1.0,, AC_MSG_ERROR([Missing libswscale package: libswscale-dev]))
