--- a/sflphone-common/src/video/Makefile.am
+++ b/sflphone-common/src/video/Makefile.am
@@ -10,6 +10,9 @@ libvideo_la_SOURCES = \
     video_v4l2.cpp \
     video_v4l2_list.cpp
 
+AM_CXXFLAGS = @UDEV_CFLAGS@
+libvideo_la_LIBADD = @UDEV_LIBS@
+
 noinst_HEADERS = \
     video_v4l2.h \
     video_v4l2_list.h
