* #6271 Move libs/video/* into src/video

--- a/sflphone-common/configure.ac
+++ b/sflphone-common/configure.ac
@@ -41,9 +41,7 @@ AC_CONFIG_FILES([libs/Makefile \
 		libs/dbus-c++/src/Makefile \
 		libs/dbus-c++/tools/Makefile \
 		libs/dbus-c++/data/Makefile \
-		libs/iax2/Makefile \
-        libs/video/Makefile \
-        libs/video/test/Makefile])
+		libs/iax2/Makefile])
 
 AC_CONFIG_FILES([src/Makefile \
 		src/sip/Makefile \
