--- a/sflphone-client-gnome/configure.ac
+++ b/sflphone-client-gnome/configure.ac
@@ -21,7 +21,7 @@ AC_ARG_WITH(debug,
 		[with_debug=no]
 	)
 if test "x$with_debug" = "xfull" -o "x$with_debug" = "xyes"; then
-	CFLAGS="-g -O0 -DDEBUG -Wall -Wextra"
+	CFLAGS="-g -O0 -Wall -Wextra"
 else
 	CFLAGS="$CFLAGS -Wall -Wextra"
 fi
