* #6290, #6289: removed unused classes from utilspp, fixed make check
the tests/Makefile.am still depended on observer.o

--- a/sflphone-common/libs/utilspp/Makefile.am
+++ b/sflphone-common/libs/utilspp/Makefile.am
@@ -1,16 +1,13 @@
-SUBDIRS = functor singleton
+SUBDIRS = singleton
 
 noinst_LTLIBRARIES = libutilspp.la
 
 libutilspp_la_SOURCES = \
 	EmptyType.hpp \
-	Functors.hpp \
 	NonCopyable.hpp \
 	NullType.hpp \
 	Singleton.hpp \
-	SmartPtr.hpp \
 	ThreadingFactoryMutex.hpp ThreadingFactoryMutex.inl \
-	ThreadingSingle.hpp ThreadingSingle.inl \
-	TypeList.hpp
+	ThreadingSingle.hpp ThreadingSingle.inl
 
 libutilspp_la_LIBADD = ./singleton/libsingleton.la
