* #6321: integrate clutter widget into preferences dialog

--- a/sflphone-client-gnome/src/video/Makefile.am
+++ b/sflphone-client-gnome/src/video/Makefile.am
@@ -4,10 +4,10 @@ noinst_LTLIBRARIES = libvideo.la
 
 libvideo_la_SOURCES = video_preview.c
 
-libvideo_la_LDFLAGS = @CLUTTER_LDFLAGS@
+libvideo_la_LDFLAGS = @CLUTTER_LDFLAGS@ @CLUTTERGTK_LDFLAGS@
 
 libvideo_la_LIBADD = @CLUTTER_LIBS@ \
-			@SFLGTK_LIBS@ @SFLGLIB_LIBS@ 
+			@SFLGTK_LIBS@ @SFLGLIB_LIBS@  @CLUTTERGTK_LIBS@
 					  
 libvideo_la_CFLAGS = @CLUTTER_CFLAGS@ \
-			@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@
+			@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @CLUTTERGTK_CFLAGS@
