* #6226 : monitor v4l2 devices insertion/deletion
TODO : update preferences dialog on the client
currently you have to close it and open it again to see the changes

--- a/sflphone-common/configure.ac
+++ b/sflphone-common/configure.ac
@@ -240,15 +240,7 @@ PKG_CHECK_EXISTS([dbus-1 >= $DBUS_RECURSIVE_MUTEX_VERSION],
 	[AC_DEFINE(DBUS_HAS_RECURSIVE_MUTEX, , [DBus supports recursive mutexes (needs DBus >= 0.95)])]
 	)
 
-AC_ARG_ENABLE(udev,
-        AS_HELP_STRING(
-            [--disable-udev],
-            [enable video4linux devices detection (enabled by default)]
-            )
-        )
-
-test "x$enable_udev" != "xno" && PKG_CHECK_MODULES(UDEV, libudev >= 142, [AC_DEFINE([HAVE_UDEV], [], [Using libudev])])
-
+PKG_CHECK_MODULES(UDEV, libudev >= 142)
 
 AC_ARG_WITH(debug,
 		AS_HELP_STRING(
