Do not link 2 times with libvideo.la, it is already included in libsflphone

--- a/sflphone-common/src/video/test/Makefile.am
+++ b/sflphone-common/src/video/test/Makefile.am
@@ -6,15 +6,15 @@ test_video_endpoint_SOURCES=test_video_endpoint.cpp test_video_endpoint.h
 test_video_endpoint_LDADD=$(top_builddir)/src/video/libvideo.la
 
 test_video_rtp_SOURCES=test_video_rtp.cpp test_video_rtp.h
-test_video_rtp_LDADD=$(top_builddir)/src/video/libvideo.la $(top_builddir)/src/libsflphone.la
+test_video_rtp_LDADD=$(top_builddir)/src/libsflphone.la
 
 test_video_preview_SOURCES=test_video_preview.cpp test_video_preview.h
-test_video_preview_LDADD=$(top_builddir)/src/video/libvideo.la $(top_builddir)/src/libsflphone.la
+test_video_preview_LDADD=$(top_builddir)/src/libsflphone.la
 
 test_thread_SOURCES=test_thread.cpp
 test_thread_LDADD=@CCRTP_LIBS@
 
 test_v4l2_SOURCES=test_v4l2.cpp $(top_srcdir)/src/logger.cpp
-test_v4l2_LDADD=$(top_builddir)/src/video/libvideo.la $(top_builddir)/src/libsflphone.la
+test_v4l2_LDADD=$(top_builddir)/src/libsflphone.la
 
 AM_CXXFLAGS=-I$(top_builddir)/src/video -I$(top_builddir)/src
