* #6366 : rework video_preview / videoconf interaction and preview referencement

--- a/sflphone-client-gnome/src/video/Makefile.am
+++ b/sflphone-client-gnome/src/video/Makefile.am
@@ -10,4 +10,4 @@ libvideo_la_LIBADD = @CLUTTER_LIBS@ \
 			@SFLGTK_LIBS@ @SFLGLIB_LIBS@  @CLUTTERGTK_LIBS@
 					  
 libvideo_la_CFLAGS = @CLUTTER_CFLAGS@ \
-			@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @CLUTTERGTK_CFLAGS@
+			@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @CLUTTERGTK_CFLAGS@ @DBUSGLIB_CFLAGS@
