* #6507 : find codecs dir in build directory
No need to set CODECS_PATH when running the daemon from build directory anymore

Remove custom code to store program path from video_receive_thread.cpp
Instead use argv[0] and create a new file : fileutils.cpp

--- a/sflphone-common/src/Makefile.am
+++ b/sflphone-common/src/Makefile.am
@@ -45,7 +45,8 @@ noinst_HEADERS = \
 		accountcreator.h \
 		call.h \
 		logger.h \
-		numbercleaner.h
+		numbercleaner.h \
+		fileutils.h
 
 libsflphone_la_LIBADD = \
 	$(src)/libs/utilspp/libutilspp.la \
@@ -100,4 +101,5 @@ libsflphone_la_SOURCES = conference.cpp \
 		call.cpp \
 		account.cpp \
 		logger.cpp \
-		numbercleaner.cpp 
+		numbercleaner.cpp \
+		fileutils.cpp
