--- a/sflphone-common/test/Makefile.am
+++ b/sflphone-common/test/Makefile.am
@@ -4,6 +4,7 @@ TESTS_ENVIRONMENT = CODECS_PATH="$(top_builddir)/src/audio/codecs" \
 					FAKE_PLUGIN_DIR="$(top_builddir)/src/plug-in/test/" \
 					FAKE_PLUGIN_NAME="$(top_builddir)/src/plug-in/test/libplugintest.so"
 check_PROGRAMS = test
+TESTS = run_tests.sh
 
 test_CXXFLAGS = $(CPPUNIT_CFLAGS)
 test_LDADD = $(LLIBS) @LIBCRYPTO_LIBS@
