--- a/sflphone-common/test/sflphoned-sample.yml
+++ b/sflphone-common/test/sflphoned-sample.yml
@@ -3,16 +3,17 @@ accounts:
 - alias: 
   codecs: 0/
   credential:
-    count: 0
+  - password: 
+    realm: '*'
+    username: 
   displayName: 
-  dtmfType: sipinfo
+  dtmfType: true
   enable: true
   expire: 
   hostname: 
   id: IP2IP
   interface: default
   mailbox: 
-  password: 
   port: 5060
   publishAddr: 
   publishPort: 5060
@@ -49,12 +50,12 @@ accounts:
     helloHashEnabled: true
     notSuppWarning: true
 preferences:
-  audioApi: pulseaudio
+  audioApi: true
   historyLimit: 30
   historyMaxCalls: 20
   md5Hash: false
   notifyMails: false
-  order: Account:1309188361/Account:1309187807/Account:1309187723/Account:1309187670/Account:1309187609/Account:1309187081/Account:1308839853/Account:1308839662/Account:1308839447/Account:1308839359/Account:1308839335/Account:1308838875/Account:1308838713/Account:1308838236/Account:1307975440/Account:1307975347/Account:1307974800/Account:1307974672/Account:1307974527/Account:1303487773/Account:1303247743/Account:1302895321/Account:1302892836/Account:1302891834/Account:1302882519/Account:1302207377/Account:1302207262/Account:1302204136/Account:1302204108/Account:1294850905/Account:1294850775/Account:1294850618/Account:1294849651/Account:1294849602/Account:1294849310/Account:1288964768/Account:1288964603/Account:1288964434/Account:1288964141/Account:1288964134/
+  order: Account:1312398082/Account:1312398066/Account:1309188361/Account:1309187807/Account:1309187723/Account:1309187670/Account:1309187609/Account:1309187081/Account:1308839853/Account:1308839662/Account:1308839447/Account:1308839359/Account:1308839335/Account:1308838875/Account:1308838713/Account:1308838236/Account:1307975440/Account:1307975347/Account:1307974800/Account:1307974672/Account:1307974527/Account:1303487773/Account:1303247743/Account:1302895321/Account:1302892836/Account:1302891834/Account:1302882519/Account:1302207377/Account:1302207262/Account:1302204136/Account:1302204108/Account:1294850905/Account:1294850775/Account:1294850618/Account:1294849651/Account:1294849602/Account:1294849310/Account:1288964768/Account:1288964603/Account:1288964434/Account:1288964141/Account:1288964134/
   portNum: 5060
   registrationExpire: 180
   searchBarDisplay: true
@@ -65,7 +66,7 @@ voipPreferences:
   playTones: true
   pulseLength: 250
   symmetric: true
-  zidFile: zidFile
+  zidFile: true
 addressbook:
   business: true
   enabled: true
@@ -92,7 +93,7 @@ audio:
   alwaysRecording: false
   echoCancel: false
   echoDelayLength: 0
-  echoTailLength: 0
+  echoTailLength: 100
   noiseReduce: true
   pulse:
     devicePlayback: alsa_output.pci-0000_00_1b.0.analog-stereo
