configure.ac: cleanup

--- a/sflphone-common/src/dbus/Makefile.am
+++ b/sflphone-common/src/dbus/Makefile.am
@@ -40,7 +40,7 @@ noinst_HEADERS =            \
     $(BUILT_SOURCES)
 
 # Dbus service file
-servicedir = $(DBUS_SERVICES_DIR)
+servicedir = $(datadir)/dbus-1/services
 service_in_files = org.sflphone.SFLphone.service.in
 service_DATA = $(service_in_files:.service.in=.service)
 
