--- a/gnome/.project
+++ b/gnome/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sflphone-client-gnome</name>
+	<name>gnome</name>
 	<comment></comment>
 	<projects>
 	</projects>
