--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ doc/*.html
 /install-sh
 /stamp-h1
 /Makefile
-sflphone-client-gnome/stamp-h1
+gnome/stamp-h1
 *.omf
 
 # Ignore built stuff
@@ -48,19 +48,19 @@ sflphone-client-gnome/stamp-h1
 /src/sflphone
 /src/.libs
 
-# Ignore sflphone-common stuff
-/sflphone-common/autom4te.cache
-/sflphone-common/config.guess
-/sflphone-common/config.*
-/sflphone-common/configure
-/sflphone-common/depcomp
-/sflphone-common/install-sh
-/sflphone-common/INSTALL
-/sflphone-common/missing
-/sflphone-common/src/dbus/org.sflphone.SFLphone.service
-/sflphone-common/src/sflphoned
-/sflphone-common/stamp-h1
-/sflphone-common/ltmain.sh
+# Ignore daemon stuff
+/daemon/autom4te.cache
+/daemon/config.guess
+/daemon/config.*
+/daemon/configure
+/daemon/depcomp
+/daemon/install-sh
+/daemon/INSTALL
+/daemon/missing
+/daemon/src/dbus/org.sflphone.SFLphone.service
+/daemon/src/sflphoned
+/daemon/stamp-h1
+/daemon/ltmain.sh
 
 # PJSIP files
 *.depend
@@ -98,103 +98,103 @@ config_auto.h
 /libs/pjproject-1.0.3/third_party/build/portaudio/os-auto.mak
 
 # Makefile
-/sflphone-common/src/Makefile
-/sflphone-common/src/dbus/Makefile
-/sflphone-common/src/config/Makefile
-/sflphone-common/src/plug-in/Makefile
-/sflphone-common/src/plug-in/test/Makefile
-/sflphone-common/src/plug-in/audiorecorder/Makefile
-/sflphone-common/src/audio/Makefile
-/sflphone-common/src/audio/codecs/Makefile
-/sflphone-common/src/audio/codecs/ilbc/Makefile
-/sflphone-common/src/hooks/Makefile
-/sflphone-common/doc/Makefile
-/sflphone-common/man/Makefile
-/sflphone-common/po/Makefile
-/sflphone-common/test/Makefile
-/sflphone-common/ringtones/Makefile
-/sflphone-common/doc/doxygen/Makefile
-/sflphone-common/libs/Makefile
-/sflphone-common/libs/utilspp/Makefile
-/sflphone-common/libs/stund/Makefile
-/sflphone-common/libs/iax2/Makefile
-/sflphone-common/libs/utilspp/functor/Makefile
-/sflphone-common/libs/utilspp/singleton/Makefile
-/sflphone-client-gnome/Makefile
-/sflphone-client-gnome/src/Makefile
-/sflphone-client-gnome/src/config/Makefile
-/sflphone-client-gnome/src/dbus/Makefile
-/sflphone-client-gnome/src/contacts/Makefile
-/sflphone-client-gnome/src/contacts/addressbook/Makefile
-/sflphone-client-gnome/src/icons/Makefile
-/sflphone-client-gnome/pixmaps/Makefile
-/sflphone-client-gnome/tests/Makefile
-/sflphone-client-gnome/man/Makefile
-/sflphone-client-gnome/src/widget/Makefile
-/sflphone-client-gnome/doc/Makefile
-/sflphone-client-gnome/po/Makefile
-/sflphone-client-gnome/webkit/Makefile
+/daemon/src/Makefile
+/daemon/src/dbus/Makefile
+/daemon/src/config/Makefile
+/daemon/src/plug-in/Makefile
+/daemon/src/plug-in/test/Makefile
+/daemon/src/plug-in/audiorecorder/Makefile
+/daemon/src/audio/Makefile
+/daemon/src/audio/codecs/Makefile
+/daemon/src/audio/codecs/ilbc/Makefile
+/daemon/src/hooks/Makefile
+/daemon/doc/Makefile
+/daemon/man/Makefile
+/daemon/po/Makefile
+/daemon/test/Makefile
+/daemon/ringtones/Makefile
+/daemon/doc/doxygen/Makefile
+/daemon/libs/Makefile
+/daemon/libs/utilspp/Makefile
+/daemon/libs/stund/Makefile
+/daemon/libs/iax2/Makefile
+/daemon/libs/utilspp/functor/Makefile
+/daemon/libs/utilspp/singleton/Makefile
+/gnome/Makefile
+/gnome/src/Makefile
+/gnome/src/config/Makefile
+/gnome/src/dbus/Makefile
+/gnome/src/contacts/Makefile
+/gnome/src/contacts/addressbook/Makefile
+/gnome/src/icons/Makefile
+/gnome/pixmaps/Makefile
+/gnome/tests/Makefile
+/gnome/man/Makefile
+/gnome/src/widget/Makefile
+/gnome/doc/Makefile
+/gnome/po/Makefile
+/gnome/webkit/Makefile
 
 
-# Ignore sflphone-client-gnome stuff
-/sflphone-client-gnome/config.*
-/sflphone-client-gnome/configure
-/sflphone-client-gnome/depcomp
-/sflphone-client-gnome/install-sh
-/sflphone-client-gnome/missing
-/sflphone-client-gnome/mkinstalldirs
-/sflphone-client-gnome/src/sflphone-client-gnome
-/sflphone-client-gnome/autom4te*
-/sflphone-client-gnome/sflphone.desktop
-/sflphone-client-gnome/confdefs.h
-/sflphone-client-gnome/conftest.dir
-/sflphone-client-gnome/tests/check_config
-/sflphone-client-gnome/tests/check_contacts
-/sflphone-client-gnome/tests/check_dbus
-/sflphone-client-gnome/tests/check_global
-/sflphone-client-gnome/src/dbus/marshaller.c
-/sflphone-client-gnome/src/dbus/marshaller.h
-/sflphone-client-gnome/ltmain.sh
-/sflphone-client-gnome/@GCONF_SCHEMA_FILE_DIR@/
-/sflphone-client-gnome/active
-/sflphone-client-gnome/man/sflphone.pod
+# Ignore gnome stuff
+/gnome/config.*
+/gnome/configure
+/gnome/depcomp
+/gnome/install-sh
+/gnome/missing
+/gnome/mkinstalldirs
+/gnome/src/gnome
+/gnome/autom4te*
+/gnome/sflphone.desktop
+/gnome/confdefs.h
+/gnome/conftest.dir
+/gnome/tests/check_config
+/gnome/tests/check_contacts
+/gnome/tests/check_dbus
+/gnome/tests/check_global
+/gnome/src/dbus/marshaller.c
+/gnome/src/dbus/marshaller.h
+/gnome/ltmain.sh
+/gnome/@GCONF_SCHEMA_FILE_DIR@/
+/gnome/active
+/gnome/man/sflphone.pod
 
 
 # Ignore sflphone_kde stuff
-/sflphone-client-kde/build
-/sflphone-client-kde/*.moc
-/sflphone-client-kde/src/moc_*.cpp
-/sflphone-client-kde/src/ui_*.h
-#/sflphone-client-kde/po/
-#/sflphone-client-kde/po/* 
-#/sflphone-client-kde/doc/
-#/sflphone-client-kde/man/
-#/sflphone-client-kde/data/
-/sflphone-client-kde/CMakeCache.txt
-/sflphone-client-kde/CMakeLists.txt.user
-/sflphone-client-kde/CTestTestfile.cmake
-/sflphone-client-kde/*.cmake
-/sflphone-client-kde/Makefile
-/sflphone-client-kde/CMakeFiles/*
-/sflphone-client-kde/CMakeTmp/
-/sflphone-client-kde/qtcreator-build/
-/sflphone-client-kde/src/.directory
-/sflphone-client-kde/src/Makefile
-/sflphone-client-kde/src/CTestTestfile.cmake
-/sflphone-client-kde/src/CMakeFiles/
-/sflphone-client-kde/src/*.moc
-/sflphone-client-kde/src/callmanager_dbus_interface.*
-/sflphone-client-kde/src/configurationmanager_dbus_interface.*
-/sflphone-client-kde/src/instance_dbus_interface.*
-/sflphone-client-kde/src/sflphone-client-kde_automoc.cpp
-/sflphone-client-kde/src/sflphone-client-kde_automoc.cpp.files
-/sflphone-client-kde/src/cmake_install.cmake
-/sflphone-client-kde/src/kcfg_settings.cpp
-/sflphone-client-kde/src/kcfg_settings.h
-/sflphone-client-kde/src/qrc_resources.cxx
-/sflphone-client-kde/src/sflphone-client-kde
-/sflphone-client-kde/src/sflphone-client-kde.shell
-/sflphone-client-kde/man/sflphone.pod
+/kde/build
+/kde/*.moc
+/kde/src/moc_*.cpp
+/kde/src/ui_*.h
+#/kde/po/
+#/kde/po/* 
+#/kde/doc/
+#/kde/man/
+#/kde/data/
+/kde/CMakeCache.txt
+/kde/CMakeLists.txt.user
+/kde/CTestTestfile.cmake
+/kde/*.cmake
+/kde/Makefile
+/kde/CMakeFiles/*
+/kde/CMakeTmp/
+/kde/qtcreator-build/
+/kde/src/.directory
+/kde/src/Makefile
+/kde/src/CTestTestfile.cmake
+/kde/src/CMakeFiles/
+/kde/src/*.moc
+/kde/src/callmanager_dbus_interface.*
+/kde/src/configurationmanager_dbus_interface.*
+/kde/src/instance_dbus_interface.*
+/kde/src/kde_automoc.cpp
+/kde/src/kde_automoc.cpp.files
+/kde/src/cmake_install.cmake
+/kde/src/kcfg_settings.cpp
+/kde/src/kcfg_settings.h
+/kde/src/qrc_resources.cxx
+/kde/src/kde
+/kde/src/kde.shell
+/kde/man/sflphone.pod
 
 # Ignore sflphone-plugins stuff
 
@@ -211,7 +211,7 @@ config_auto.h
 /sflphone-plugins/install-sh
 /sflphone-plugins/ltmain.sh
 /sflphone-plugins/missing
-/sflphone-plugins/sflphone-client-gnome.schemas
+/sflphone-plugins/gnome.schemas
 /sflphone-plugins/sflphone.desktop
 /sflphone-plugins/sflphone.desktop.*
 /sflphone-plugins/stamp-h.in
@@ -219,84 +219,84 @@ config_auto.h
 
 # Ignore sub-modules stuff
 ## libiax2
-/sflphone-common/libs/libiax2/doc/html
-/sflphone-common/libs/libiax2/config.*
-/sflphone-common/libs/libiax2/autom4te.cache
-/sflphone-common/libs/libiax2/src/.libs
-/sflphone-common/libs/libiax2/libtool
-/sflphone-common/libs/libiax2/ltmain.sh
-/sflphone-common/libs/libiax2/iax-config
-/sflphone-common/libs/libiax2/configure
-/sflphone-common/libs/libiax2/Makefile
-/sflphone-common/libs/libiax2/iax2-config
-/sflphone-common/libs/libiax2/src/Makefile
+/daemon/libs/libiax2/doc/html
+/daemon/libs/libiax2/config.*
+/daemon/libs/libiax2/autom4te.cache
+/daemon/libs/libiax2/src/.libs
+/daemon/libs/libiax2/libtool
+/daemon/libs/libiax2/ltmain.sh
+/daemon/libs/libiax2/iax-config
+/daemon/libs/libiax2/configure
+/daemon/libs/libiax2/Makefile
+/daemon/libs/libiax2/iax2-config
+/daemon/libs/libiax2/src/Makefile
 
 ## dbus-c++
-/sflphone-common/libs/dbus-c++/Makefile
-/sflphone-common/libs/dbus-c++/autom4te.cache/requests
-/sflphone-common/libs/dbus-c++/config.log
-/sflphone-common/libs/dbus-c++/Makefile
-/sflphone-common/libs/dbus-c++/autom4te.cache/requests
-/sflphone-common/libs/dbus-c++/config.log
-/sflphone-common/libs/dbus-c++/config.status
-/sflphone-common/libs/dbus-c++/configure
-/sflphone-common/libs/dbus-c++/data/Makefile
-/sflphone-common/libs/dbus-c++/dbus-c++-1-uninstalled.pc
-/sflphone-common/libs/dbus-c++/dbus-c++-1.pc
-/sflphone-common/libs/dbus-c++/doc/Doxyfile
-/sflphone-common/libs/dbus-c++/doc/Makefile
-/sflphone-common/libs/dbus-c++/examples/Makefile
-/sflphone-common/libs/dbus-c++/examples/echo/.libs/
-/sflphone-common/libs/dbus-c++/examples/echo/Makefile
-/sflphone-common/libs/dbus-c++/examples/echo/echo-client-glue.h
-/sflphone-common/libs/dbus-c++/examples/echo/echo-client-mt
-/sflphone-common/libs/dbus-c++/examples/echo/echo-server
-/sflphone-common/libs/dbus-c++/examples/echo/echo-server-glue.h
-/sflphone-common/libs/dbus-c++/examples/glib/Makefile
-/sflphone-common/libs/dbus-c++/examples/glib/dbus-glue.h
-/sflphone-common/libs/dbus-c++/examples/hal/.libs/
-/sflphone-common/libs/dbus-c++/examples/hal/Makefile
-/sflphone-common/libs/dbus-c++/examples/hal/hal-listen
-/sflphone-common/libs/dbus-c++/examples/properties/.libs/
-/sflphone-common/libs/dbus-c++/examples/properties/Makefile
-/sflphone-common/libs/dbus-c++/examples/properties/propsgs-client
-/sflphone-common/libs/dbus-c++/examples/properties/propsgs-glue-adaptor.h
-/sflphone-common/libs/dbus-c++/examples/properties/propsgs-glue-proxy.h
-/sflphone-common/libs/dbus-c++/examples/properties/propsgs-server
-/sflphone-common/libs/dbus-c++/include/dbus-c++/config.h
-/sflphone-common/libs/dbus-c++/include/dbus-c++/stamp-h1
-/sflphone-common/libs/dbus-c++/src/.libs/
-/sflphone-common/libs/dbus-c++/src/Makefile
-/sflphone-common/libs/dbus-c++/tools/.libs/
-/sflphone-common/libs/dbus-c++/tools/Makefile
-/sflphone-common/libs/dbus-c++/tools/dbusxx-introspect
-/sflphone-common/libs/dbus-c++/tools/dbusxx-xml2cpp
+/daemon/libs/dbus-c++/Makefile
+/daemon/libs/dbus-c++/autom4te.cache/requests
+/daemon/libs/dbus-c++/config.log
+/daemon/libs/dbus-c++/Makefile
+/daemon/libs/dbus-c++/autom4te.cache/requests
+/daemon/libs/dbus-c++/config.log
+/daemon/libs/dbus-c++/config.status
+/daemon/libs/dbus-c++/configure
+/daemon/libs/dbus-c++/data/Makefile
+/daemon/libs/dbus-c++/dbus-c++-1-uninstalled.pc
+/daemon/libs/dbus-c++/dbus-c++-1.pc
+/daemon/libs/dbus-c++/doc/Doxyfile
+/daemon/libs/dbus-c++/doc/Makefile
+/daemon/libs/dbus-c++/examples/Makefile
+/daemon/libs/dbus-c++/examples/echo/.libs/
+/daemon/libs/dbus-c++/examples/echo/Makefile
+/daemon/libs/dbus-c++/examples/echo/echo-client-glue.h
+/daemon/libs/dbus-c++/examples/echo/echo-client-mt
+/daemon/libs/dbus-c++/examples/echo/echo-server
+/daemon/libs/dbus-c++/examples/echo/echo-server-glue.h
+/daemon/libs/dbus-c++/examples/glib/Makefile
+/daemon/libs/dbus-c++/examples/glib/dbus-glue.h
+/daemon/libs/dbus-c++/examples/hal/.libs/
+/daemon/libs/dbus-c++/examples/hal/Makefile
+/daemon/libs/dbus-c++/examples/hal/hal-listen
+/daemon/libs/dbus-c++/examples/properties/.libs/
+/daemon/libs/dbus-c++/examples/properties/Makefile
+/daemon/libs/dbus-c++/examples/properties/propsgs-client
+/daemon/libs/dbus-c++/examples/properties/propsgs-glue-adaptor.h
+/daemon/libs/dbus-c++/examples/properties/propsgs-glue-proxy.h
+/daemon/libs/dbus-c++/examples/properties/propsgs-server
+/daemon/libs/dbus-c++/include/dbus-c++/config.h
+/daemon/libs/dbus-c++/include/dbus-c++/stamp-h1
+/daemon/libs/dbus-c++/src/.libs/
+/daemon/libs/dbus-c++/src/Makefile
+/daemon/libs/dbus-c++/tools/.libs/
+/daemon/libs/dbus-c++/tools/Makefile
+/daemon/libs/dbus-c++/tools/dbusxx-introspect
+/daemon/libs/dbus-c++/tools/dbusxx-xml2cpp
 
 # Ignore temp files
 *~
 
 # GNOME doc file
-/sflphone-client-gnome/gnome-doc-utils.make
-/sflphone-client-gnome/doc/de/
-/sflphone-client-gnome/doc/fr/
-/sflphone-client-gnome/doc/es/
-/sflphone-client-gnome/doc/it/
-/sflphone-client-gnome/doc/ko/
-/sflphone-client-gnome/doc/pl/
-/sflphone-client-gnome/doc/pt/
-/sflphone-client-gnome/doc/pt_BR/
-/sflphone-client-gnome/doc/ru/
-/sflphone-client-gnome/doc/zh_CN/
-/sflphone-client-gnome/doc/zh_TW/
-/sflphone-client-gnome/doc/zh_HK/
+/gnome/gnome-doc-utils.make
+/gnome/doc/de/
+/gnome/doc/fr/
+/gnome/doc/es/
+/gnome/doc/it/
+/gnome/doc/ko/
+/gnome/doc/pl/
+/gnome/doc/pt/
+/gnome/doc/pt_BR/
+/gnome/doc/ru/
+/gnome/doc/zh_CN/
+/gnome/doc/zh_TW/
+/gnome/doc/zh_HK/
 
 # build system
-/tools/build-system/launchpad/sflphone-common
-!/tools/build-system/launchpad/sflphone-common/debian
-/tools/build-system/launchpad/sflphone-client-gnome
-!/tools/build-system/launchpad/sflphone-client-gnome/debian
-/tools/build-system/launchpad/sflphone-client-kde
-!/tools/build-system/launchpad/sflphone-client-kde/debian
+/tools/build-system/launchpad/daemon
+!/tools/build-system/launchpad/daemon/debian
+/tools/build-system/launchpad/gnome
+!/tools/build-system/launchpad/gnome/debian
+/tools/build-system/launchpad/kde
+!/tools/build-system/launchpad/kde/debian
 /tools/build-system/launchpad/*.dsc
 /tools/build-system/launchpad/*.changes
 /tools/build-system/launchpad/*.tar.gz
