* #6630 : don't make DBusManager a singleton
Instead it is part of Manager which is already itself a singleton
When the client requests termination of the daemon, the DBusManager instance
is not destructed, so we avoid using already freed memory

make Manager::(un)serialize static functions, they don't depend on the instance state
No need to check for the NULLity of _dbus anymore

Remove a useless argument to initConfigFile

--- a/daemon/src/dbus/Makefile.am
+++ b/daemon/src/dbus/Makefile.am
@@ -15,7 +15,7 @@ libdbus_la_SOURCES = \
     callmanager.cpp \
     configurationmanager.cpp  \
     instance.cpp  \
-    dbusmanagerimpl.cpp  \
+    dbusmanager.cpp  \
     networkmanager.cpp
 
 if USE_NETWORKMANAGER
@@ -34,7 +34,6 @@ noinst_HEADERS =            \
     configurationmanager.h  \
     instance.h              \
     dbusmanager.h           \
-    dbusmanagerimpl.h       \
     networkmanager_proxy.h  \
     networkmanager.h        \
     $(BUILT_SOURCES)
